fixed animations on ios

--- a/assets/style.css
+++ b/assets/style.css
@@ -211,8 +211,8 @@ h1 + p {
   }
 
 @keyframes slam {
-    from {opacity: 0; font-size: 200%;}
-    to {opacity:1; font-size: 100%;}
+    from {opacity: 0; transform: scale(2);}
+    to {opacity:1; transform: scale(1);}
   }
 
   @keyframes slideinleft {
